<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TIMS</string>
    <string name="action_settings">Settings</string>
    <string name="null_subject">暂时还没有主题~</string>
    <string name="null_message">暂时还没有通知~</string>

    <string name="empty"></string>
    <string name="mon">周一</string>
	<string name="tue">周二</string>
	<string name="wen">周三</string>
	<string name="thu">周四</string>
	<string name="fri">周五</string>
	<string name="sta">周六</string>
	<string name="sun">周日</string>
</resources>
