<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <RelativeLayout
        android:id="@+id/rl_mainfrag_title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#90d7ec" 
        android:layout_alignParentTop="true">

        <Spinner 
	   		android:id="@+id/spinner_mainfrag02"
	    	android:layout_width="80dp"
	    	android:layout_height="wrap_content"
	    	android:entries="@array/weeknums"
	    	android:layout_centerInParent="true"/>
 
    </RelativeLayout>
    
           <TextView android:id="@+id/test_empty"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                style="@style/courseTableText"
                android:text="@string/empty"
                android:layout_below="@id/rl_mainfrag_title"
                android:background="@drawable/course_text_view_bg"
                />
    
    
            <TextView android:id="@+id/test_monday_course"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/mon"
                style="@style/courseTableText"
                android:layout_toRightOf="@id/test_empty"
                android:layout_below="@id/rl_mainfrag_title"
                android:background="@drawable/course_text_view_bg"
                />
    
          

            <TextView android:id="@+id/test_tuesday_course"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/tue"
                style="@style/courseTableText"
                android:layout_toRightOf="@id/test_monday_course"
                android:layout_below="@id/rl_mainfrag_title"
                android:background="@drawable/course_text_view_bg"
                />


            <TextView android:id="@+id/test_wednesday_course"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/wen"
                style="@style/courseTableText"
                android:layout_toRightOf="@id/test_tuesday_course"
                android:layout_below="@id/rl_mainfrag_title"
                android:background="@drawable/course_text_view_bg"
                />


            <TextView android:id="@+id/test_thursday_course"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/thu"
                style="@style/courseTableText"
                 android:layout_toRightOf="@id/test_wednesday_course"
                 android:layout_below="@id/rl_mainfrag_title"
                 android:background="@drawable/course_text_view_bg"
                />

            <TextView android:id="@+id/test_friday_course"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/fri"
                style="@style/courseTableText"
                android:layout_toRightOf="@id/test_thursday_course"
                android:layout_below="@id/rl_mainfrag_title"
                android:background="@drawable/course_text_view_bg"
                />

            <TextView android:id="@+id/test_saturday_course"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/sta"
                style="@style/courseTableText"
                 android:layout_toRightOf="@id/test_friday_course"
                 android:layout_below="@id/rl_mainfrag_title"
                 android:background="@drawable/course_text_view_bg"
                />
            

            <TextView android:id="@+id/test_sunday_course"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                style="@style/courseTableText"
                android:text="@string/sun"
                android:layout_toRightOf="@id/test_saturday_course"
                android:layout_below="@id/rl_mainfrag_title"
                android:background="@drawable/course_table_last_colum"
                />
	    	<ScrollView
	    	    android:id="@+id/scroll_body"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	    	    android:layout_below="@id/test_empty" 
	    	    android:scrollbars="none"
	    	    >
	    	    <RelativeLayout 
	    	         android:layout_width="fill_parent"
	    	         android:layout_height="wrap_content"
	    	         android:id="@+id/test_course_rl"
	    	         >
	    	    </RelativeLayout>

	    	</ScrollView>
</RelativeLayout>
